# routes/index.js
@@ -1,6 +1,8 @@
 const express = require('express');
 const router = express.Router();
 
-router.use('/contacts', require('./contacts'))
+router.use('/', require('./swagger'));
+router.use('/user', require('./user'));
+router.use('/characters', require('./characters'));
 
 module.exports = router;
